--- a/Project-006-kittens-carousel-static-web-s3-cf/static-web/index.html
+++ b/Project-006-kittens-carousel-static-web-s3-cf/static-web/index.html
@@ -80,7 +80,7 @@
   </div>
 
 
-  <p class="footnote"><i>This static website is deployed by <b> Students_Name </b> on AWS S3, served through Cloudfront
+  <p class="footnote"><i>This static website is deployed by <b> Ogulcan </b> on AWS S3, served through Cloudfront
       and Route 53 using AWS Clouldformation Service.</i></p>
 </body>
 
